fix profilepage overflow-y scroll not working

--- a/app/components/Layout/ProfileLayout/ProfileLayout.module.scss
+++ b/app/components/Layout/ProfileLayout/ProfileLayout.module.scss
@@ -1,5 +1,5 @@
-.container {
-  display: flex;
-  flex-direction: column;
+.container {  
+  display: grid;
+  grid-template-rows: auto auto minmax(0, 1fr);
   height: 100%;
 }
